--- a/test/fixtures/milestones.yml
+++ b/test/fixtures/milestones.yml
@@ -1,13 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  title: MyText
-  complete: false
-  due_date: 2019-03-02 15:01:16
-  goal: one
-
-two:
-  title: MyText
-  complete: false
-  due_date: 2019-03-02 15:01:16
-  goal: two
+test_milestone:
+  title: "I am a milestone"
+  due_date: "2018-09-09"
